--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,4 +22,42 @@
         app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/activity_main_drawer" />
 
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_weight="1"-->
+        <!--android:orientation="vertical">-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/textView1"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentTop="true"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:layout_marginTop="52dp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:text="Main Screen"-->
+            <!--android:textAppearance="?android:attr/textAppearanceLarge" />-->
+
+        <!--<Button-->
+            <!--android:id="@+id/button2"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@+id/button1"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:layout_marginTop="35dp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:text="Stop Foreground Service" />-->
+
+        <!--<Button-->
+            <!--android:id="@+id/button1"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@+id/textView1"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:layout_marginTop="26dp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:text="Start Foreground Service" />-->
+    <!--</LinearLayout>-->
+
 </android.support.v4.widget.DrawerLayout>
